# pset-c

./: .gitignore  Makefile  README.md  TODO.md  pelicanconf.py  pyproject.toml
.github/workflows/: ci-pages.yml
assets/: words.drawio
scripts/: generate_dist_index.py  merge_yaml.py  prepare_light.py
series/: common.yml  series-00.md  series-01.md  series-02.md  series-03.md  series-04.md  series-05.md  series-06.md  series-07.md  series-08.md  series-09.md  series-10-rocket.md  series-10.md  series-1a-rocket.md  series-20.md  series-21.md  series-22.md  series-23.md  series-24.md  series-25.md  series-26.md  series-27.md  series-28.md  series-29.md  series-2a.md  series-30.md  series-e1-brake.md
series/00/: config.yml  series-00.md
series/01/: config.yml  series-01.md
series/02/: Makefile  config.yml  series-02.md
series/03/: config.yml  series-03.md
series/04/: Makefile  config.yml  series-04.md
series/05/: config.yml  series-05.md
series/06/: config.yml  series-06.md
series/07/: config.yml  series-07.md
series/08/: config.yml  series-08.md
series/09/: config.yml  series-09.md
series/10/: config.yml  series-10.md
series/10-rocket/: config.yml  series-10-rocket.md
series/20/: config.yml  series-20.md
series/21/: config.yml  series-21.md
series/22/: config.yml  series-22.md
series/23/: config.yml  series-23.md
series/24/: config.yml  series-24.md
series/25/: Makefile  config.yml  series-25.md
series/26/: config.yml  series-26.md
series/27/: config.yml  series-27.md
series/28/: config.yml  series-28.md
series/info2/: pool.md  (+10 more)
(+7 files in other folders)
