[project]
name = "exam"
version = "0.1.0"
description = "Exam build using TeXSmith."
requires-python = ">=3.13"
dependencies = [
    "texsmith>=0.6,<1.0",
    "texsmith-template-exam",
]

[project.optional-dependencies]
dev = [
    "PyYAML>=6.0,<7.0",
    "pelican>=4.10,<5.0",
    "markdown>=3.6,<4.0",
]

[tool.uv.sources]
texsmith = { git = "https://github.com/yves-chevallier/texsmith.git" }
texsmith-template-exam = { git = "https://github.com/yves-chevallier/template-exam.git", rev = "de48e67ae9730a342cfc988fbde49ebe08259710" }
