[project]
name = "exam"
version = "0.1.0"
description = "Exam build using TeXSmith."
requires-python = ">=3.13"
dependencies = [
    "texsmith>=0.2.1,<1.0",
    "texsmith-exam>=0.2.3,<1.0",
]

[project.optional-dependencies]
dev = [
    "PyYAML>=6.0,<7.0",
    "pelican>=4.10,<5.0",
    "markdown>=3.6,<4.0",
]
